# mcpscan

./: .gitignore  README.md  pyproject.toml
examples/: clean_manifest.json  poisoned_manifest.json
examples/benchmark/: broad_scope.json  clean.json  exfiltration.json  labels.json  missing_auth.json  poisoning_hidden.json  poisoning_imperative.json  typosquat.json
scripts/: benchmark.py
src/mcpscan/: __init__.py  api.py  checks.py  cli.py  engine.py  llm.py  loader.py  models.py  reporting.py  scoring.py  secrets.py
tests/: test_api.py  test_checks.py  test_cli.py  test_llm.py  test_loader.py  test_models.py  test_reporting.py  test_scoring.py  test_secrets.py
